fixed image overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -217,6 +217,16 @@ dd {
 	width: 150px;
 }
 
+.ScrollImage  { 
+	background:none repeat scroll 0 0;
+	padding:0.4em;
+	margin-bottom:0.6em;
+	overflow:auto;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	}
+
 hr {
 	background: #ccc;
 	border: none;
